[package]
name = "blade-log-cli"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[[bin]]
name = "blade-log"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
ctrlc = "3.1"
bincode = "1.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.libbladerf-sys]
path = "../libbladeRF-sys"

[dependencies.blade-logfile]
path = "../blade-logfile"

[dependencies.dsp]
path = "../dsp"
